# secure-oracle-polkadot-core

./: .gitignore  Cargo.toml  README.md  abi.json  abi_addTwo.json  addTwo.ts  addTwo.wat
dynamic_struct/: Cargo.toml
dynamic_struct/src/: lib.rs
orascript/: package.json
orascript/assembly/: datasource.ts  datasource.wasm  index.ts  orscript.ts  orscript.wasm  orscript2.ts  orscript2.wasm  tsconfig.json
orascript/output/: datasource.wasm  datasourceABI.json  orscript.wasm  orscript.wat  orscript2ABI.json  orscriptABI.json
orascripts/: addTwo.ts  addTwo.wasm  addTwoABI.json  orascript.ts
src/: abi_parser.rs  main.rs
src/core/: abi_parser.rs  mod.rs  runtime.rs
src/server/: server.rs
src/traits/: traits.rs
src/utils/: cli.rs  mod.rs  regex_str.rs
