[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["dynamic_struct"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"


[dependencies]
anyhow = "1.0.94"
wasmtime = "27.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10.8"
hex = "0.4.3"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
wasmparser = {version = "0.200.0"}
dynamic_struct = { path = "dynamic_struct" }

