[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["dynamic_struct"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"


[dependencies]
anyhow = "1.0.94"
wasmtime = "27.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10.8"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
wasmparser = {version = "0.200.0"}
dynamic_struct = { path = "dynamic_struct" }
parity-scale-codec = "3.6.12"
parity-scale-codec-derive = "3.6.12"
http = "0.2.12"
